--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
   config:
     import: optional:configserver:http//localhost:"8088"
 
+management:
+  tracing:
+    sampling:
+      probability: 1.0
